--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,12 +7,12 @@ slick.dbs.default = {
 }
 
 play.filters.cors {
-  allowedOrigins = ["http://localhost:9000", "http://172.20.10.2:9000", "http://localhost:5173", "http://192.168.0.132:9000"]
+  allowedOrigins = ["http://localhost:9000", "http://172.20.10.2:9000", "http://localhost:5173", "http://172.20.10.3:5173"]
   allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
-  allowedHttpHeaders = ["Accept", "Content-Type"]
+  allowedHttpHeaders = ["Accept", "Content-Type", "Authorization"]
 }
 
-play.http.filters = "utilities.Filters"
+play.http.filters = "utils.Filters"
 
 swagger.api.basepath = "/api-docs"
 
@@ -24,3 +24,5 @@ play.mailer {
   user = "tudor.tdr.7@gmail.com"
   password = "ehlwascvfoyazems"
 }
+
+play.server.websocket.frame.maxLength = 2M
