--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "dashjs": "^4.7.4",
+    "node-forge": "^1.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.23.0",
-    "video-react": "^0.16.0"
+    "video-react": "^0.16.0",
+    "video.js": "^8.12.0",
+    "videojs": "^1.0.0",
+    "videojs-contrib-hls": "^5.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
